[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teetime-python"
version = "0.0.1"h
authors = [
  { name="Reiner Jung", email="reiner.jung@oiloftrop.de" },
]
description = "TeeTime implementation for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cau-se/teetime-python"
"Bug Tracker" = "https://github.com/cau-se/teetime-python"
